<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weibo_mystring_percent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weibo_mystring_addfriend2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weibo_mystring_inputname"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/temfriend1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weibi_mystring_inputPercent" />
<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
    <EditText
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10" />

	<TextView
	    android:id="@+id/textView6"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/weibo_mystring_percenthao" />

	   </LinearLayout>
	   
    <Button
        android:id="@+id/addTemfriend1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/ok" />

    <Button
        android:id="@+id/next1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weibo_mystring_next" />

</LinearLayout>