<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weibo_mystring_inputPname"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weibo_mystring_projectname"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/projectname"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textView4"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </RelativeLayout>
	<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weibo_mystring_projectnum"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/projectnum"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/text"
            android:ems="10" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weibo_mystring_price1"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/projectprice"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textView5"
            android:ems="10" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weibo_mystring_select_mode"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/AA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weibo_my_string_AA" />

    <CheckBox
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weibo_mystring_percent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weibo_mystring_selectfriends"
        android:textAppearance="?android:attr/textAppearanceMedium" />



    <Button
        android:id="@+id/selOK"
        android:layout_width="98dp"
        android:layout_height="match_parent"
        android:text="@android:string/ok" />

</LinearLayout>