<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
	<TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weibo_my_string_AA" />
	<TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weibo_mystring_addfriend2"
        android:textAppearance="?android:attr/textAppearanceMedium" />
<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
     <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weibo_mystring_inputname"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/temfriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:layout_toRightOf="@+id/textView4">
        <requestFocus />
    </EditText>
</RelativeLayout>

   

    <Button
        android:id="@+id/addTemfriend"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/ok" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weibo_mystring_next" />

</LinearLayout>