<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MyTheme"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Button
        android:id="@+id/feature_add"
        style="@style/MyTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/weibosdk_my_addproject" />

    <Button
        android:id="@+id/feature_findProject"
        style="@style/MyTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/weibi_mystring_findProject" />

    <Button
        android:id="@+id/feature_oauth"
        style="@style/com_sina_weibo_sdk_loginview_default_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="onOauth"
        android:text="@string/weibosdk_demo_feature_oauth" />

</LinearLayout>